--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
      <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"
           integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO"
           crossorigin="anonymous"></script>
-     <script src="/public/script/script.js"></script>
+     <script src="/public/script/server.js"></script>
 </body>
 </html>
 
